# oop-lab1

./: CMakeLists.txt  LICENSE  README.md  check.cpp  check.h  coverage.html  index.html  main.cpp  tests.cpp  tojson.cpp  tojson.h
